--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.7",
+    "@material-ui/core": "^4.12.4",
     "dotenv": "^8.1.0",
     "express": "^4.16.4",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.1",
-    "nodemon": "^1.19.3",
+    "nodemon": "^2.0.16",
     "recompose": "^0.30.0",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^7.2.2"
   }
 }
